*SVN*

* Make assert_routing aware of the HTTP method used.  #8039 [mpalmer]
  e.g. assert_routing({ :method => 'put', :path => '/product/321' }, { :controller => "product", :action => "update", :id => "321" })

* Make map.root accept a single symbol as an argument to declare an alias.  #10818 [bscofield] 

  e.g.  map.dashboard '/dashboard', :controller=>'dashboard'
        map.root      :dashboard

* Handle corner case with image_tag when passed 'messed up' image names. #9018 [duncanbeevers, mpalmer]

* Add label_tag helper for generating elements. #10802 [DefV]

* Introduce TemplateFinder to handle view paths and lookups.  #10800 [Pratik Naik] 

* Performance: optimize route recognition. Large speedup for apps with many resource routes.  #10835 [oleganza]

* Make render :partial recognise form builders and use the _form partial.  #10814 [djanowski]

* Allow users to declare other namespaces when using the atom feed helpers. #10304 [david.calavera]

* Introduce send_file :x_sendfile => true to send an X-Sendfile response header.  [Jeremy Kemper]

* Fixed ActionView::Helpers::ActiveRecordHelper::form for when protect_from_forgery is used #10739 [jeremyevans]

* Provide nicer access to HTTP Headers.  Instead of request.env["HTTP_REFERRER"] you can now use request.headers["Referrer"]. [Koz]

* UrlWriter respects relative_url_root.  #10748 [Cheah Chu Yeow]

* The asset_host block takes the controller request as an optional second argument. Example: use a single asset host for SSL requests.  #10549 [Cheah Chu Yeow, Peter B, Tom Taylor]

* Support render :text => nil.  #6684 [tjennings, PotatoSalad, Cheah Chu Yeow]

* assert_response failures include the exception message.  #10688 [Seth Rasmussen]

* All fragment cache keys are now by default prefixed with the "views/" namespace [DHH]
